// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect > matches snapshot for multiple select 1`] = `
<div
  class="multiple-mode multiselect"
  data-v-96b70cc4=""
>
  <label
    data-v-96b70cc4=""
    for="multiselect"
  >
    Select
  </label>
  <div
    class="multiselect-input"
    data-v-96b70cc4=""
  >
    <span
      data-v-96b70cc4=""
    >
      
      <span
        class="selected-option"
        data-v-96b70cc4=""
      >
        FE
      </span>
      
    </span>
  </div>
  <ul
    class="multiselect-dropdown"
    data-v-96b70cc4=""
  >
    
    <li
      class="multiselect-option"
      data-v-96b70cc4=""
    >
      FR
    </li>
    <li
      class="multiselect-option"
      data-v-96b70cc4=""
    >
      DE
    </li>
    <li
      class="multiselect-option"
      data-v-96b70cc4=""
    >
      BE
    </li>
    <li
      class="multiselect-option selected"
      data-v-96b70cc4=""
    >
      FE
    </li>
    <li
      class="multiselect-option"
      data-v-96b70cc4=""
    >
      RE
    </li>
    
  </ul>
</div>
`;

exports[`MultiSelect > matches snapshot for single select 1`] = `
<div
  class="multiselect"
  data-v-96b70cc4=""
>
  <label
    data-v-96b70cc4=""
    for="multiselect"
  >
    Select
  </label>
  <div
    class="multiselect-input"
    data-v-96b70cc4=""
  >
    <span
      data-v-96b70cc4=""
    >
      
      <span
        class="selected-option"
        data-v-96b70cc4=""
      >
        FR
      </span>
      
    </span>
  </div>
  <ul
    class="multiselect-dropdown"
    data-v-96b70cc4=""
  >
    
    <li
      class="multiselect-option selected"
      data-v-96b70cc4=""
    >
      FR
    </li>
    <li
      class="multiselect-option"
      data-v-96b70cc4=""
    >
      DE
    </li>
    <li
      class="multiselect-option"
      data-v-96b70cc4=""
    >
      BE
    </li>
    <li
      class="multiselect-option"
      data-v-96b70cc4=""
    >
      FE
    </li>
    <li
      class="multiselect-option"
      data-v-96b70cc4=""
    >
      RE
    </li>
    
  </ul>
</div>
`;
